fix focus to use default focus to leave the browser's default focus sufficiently contrasted on all interactive elements

--- a/src/scss/05-components/_skip-links.scss
+++ b/src/scss/05-components/_skip-links.scss
@@ -22,10 +22,6 @@
 		font-size: 13px;
 		color: $color-text;
 		text-decoration: none;
-
-		&:focus {
-			outline-offset: 3px;
-		}
 	}
 
 	&:focus-within {
